--- a/src/index.html
+++ b/src/index.html
@@ -1,276 +1,212 @@
 <!DOCTYPE html>
 <html lang="en-AU" dir="ltr">
-  <head>
-    <meta charset="UTF-8" name="format-detection" content="telephone=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
-    <title>Three Crowns Hotel</title>
 
-    <!-- bootstrap -->
+<head>
+  <meta charset="UTF-8" name="format-detection" content="telephone=no" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
+  <title>Three Crowns Hotel</title>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
-    <!-- CSS -->
+  <!-- CSS -->
+  <link rel="stylesheet" href="scss/main.scss" />
 
-    <link rel="stylesheet" href="scss/main.scss" />
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 
-    <!-- Google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Font awesome -->
+  <script src="https://use.fontawesome.com/8eb409c3d6.js"></script>
+  <script src="https://kit.fontawesome.com/94a21f29c7.js" crossorigin="anonymous"></script>
+</head>
 
-    <!-- Font awesome -->
-    <script src="https://use.fontawesome.com/8eb409c3d6.js"></script>
-    <script
-      src="https://kit.fontawesome.com/94a21f29c7.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
- 
-    <header>
+<body>
+
+  <header>
     <!-- Nav bar  -->
-    <nav class="navbar" >
+    <nav class="navbar">
       <ul class="navbar__list">
-        <div class="burgerburger" >&#9776;</div>
-          <li >
-            <a href="menu.html"
-              ><button class="navbar__button-menu">Menus</button></a
-            >
-          </li>
-          <li >
-            <a class="navbar__logo" href="/">
-              <img src="images/logo.svg" alt="Three Crowns Hotel Logo"/>
-            </a>
-          </li>
-          <li>
-            <a href="#book"
-              ><button class="navbar__button-book">Book a table</button>
-            </a>
-          </li>
-        </ul>   
+        <div class="burgerburger">&#9776;</div>
+        <li>
+          <a href="menu.html"><button class="navbar__button-menu">Menus</button></a>
+        </li>
+        <li>
+          <a class="navbar__logo" href="/">
+            <img src="images/logo.svg" alt="Three Crowns Hotel Logo" />
+          </a>
+        </li>
+        <li>
+          <a href="#book"><button class="navbar__button-book">Book a table</button>
+          </a>
+        </li>
+      </ul>
 
-        <!-- The overlay -->
-<div id="myNav" class="overlay">
-  <!-- Button to close the overlay navigation -->
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <!-- Overlay content -->
-  <div class="overlay-content">
-    <a href="#book"
-    ><button class="overlay__button-book">Book a table</button>
-  </a>
-  <a href="menu.html"
-              ><button class="overlay__button-menu">Menus</button></a
-            >
-            <div class="overlay__socials">
-              <a
-                href="https://www.facebook.com/threecrownshotel"
-                target="_blank"
-                class="overlay__socials-button fa fa-facebook fa-2x"
-              ></a>
-              <a
-                href="https://www.instagram.com/threecrownshotel/?hl=en"
-                target="_blank"
-                class="overlay__socials-button fa fa-instagram fa-2x"
-              ></a>
-            </div>
-  </div>
-</div>
+      <!-- The overlay -->
+      <div id="myNav" class="overlay">
+        <!-- Button to close the overlay navigation -->
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <!-- Overlay content -->
+        <div class="overlay-content">
+          <a href="#book"><button class="overlay__button-book">Book a table</button>
+          </a>
+          <a href="menu.html"><button class="overlay__button-menu">Menus</button></a>
+          <div class="overlay__socials">
+            <a href="https://www.facebook.com/threecrownshotel" target="_blank"
+              class="overlay__socials-button fa fa-facebook fa-2x"></a>
+            <a href="https://www.instagram.com/threecrownshotel/?hl=en" target="_blank"
+              class="overlay__socials-button fa fa-instagram fa-2x"></a>
+          </div>
+        </div>
+      </div>
     </nav>
 
-      <!-- Hero image -->
-      <div>
-        <picture>
-          <source
-            media="(max-width:400px)"
-            srcset="images/hero-image-cropped.png"
-          />
-          <source srcset="images/hero-image.png" />
-          <img
-            class="hero-image"
-            src="images/hero-image.png"
-            alt="People eating and drinking at a table"
-          />
-        </picture>
-      </div>
-    </header>
+    <!-- Hero image -->
+    <div>
+      <picture>
+        <source media="(max-width:400px)" srcset="images/hero-image-cropped.png" />
+        <source srcset="images/hero-image.png" />
+        <img class="hero-image" src="images/hero-image.png" alt="People eating and drinking at a table" />
+      </picture>
+    </div>
+  </header>
 
-    <!-- About section -->
-    <section>
-      <div class="container-fluid px-0">
-        <div class="row mx-0">
-          <div class="about">
-            <div class="about__text">
-              <h1 class="about__heading">Great food, booze & people</h1>
-              <hr class="about__line" />
-              <p class="about__para">
-                Lorem ipsum dolor sit amet consectetur adi pisicing elit. Quod
-                maxime sit asperiores consectetur temporibus. Aut doloremque
-                quisquam placeat aperiam praesentium, voluptatem neque dolor
-                vero officia. Obcaecati hic magnam ut. Eius?.
-              </p>
+  <!-- About section -->
+  <section>
+    <div class="container-fluid px-0">
+      <div class="row mx-0">
+        <div class="about">
+          <div class="about__text">
+            <h1 class="about__heading">Great food, booze & people</h1>
+            <hr class="about__line" />
+            <p class="about__para">
+              Lorem ipsum dolor sit amet consectetur adi pisicing elit. Quod
+              maxime sit asperiores consectetur temporibus. Aut doloremque
+              quisquam placeat aperiam praesentium, voluptatem neque dolor
+              vero officia. Obcaecati hic magnam ut. Eius?.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Two Columns Section -->
+  <section>
+    <div class="container-fluid px-0">
+      <div class="row no-gutters">
+        <div class="block col-lg-6">
+          <div class="block__text">
+            <h1 class="block__heading">Location</h1>
+            <hr class="block__line" />
+            <p class="block__para">
+              365 Victoria St, West Melbourne VIC 3003
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <picture>
+            <source media="(max-width:400px)" srcset="images/spritz-cropped.png" />
+            <source srcset="images/spritz.png" />
+            <img class="block-image" src="images/spritz.png" alt="Aperol Spritz Cocktail" />
+          </picture>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container-fluid px-0">
+      <div class="row no-gutters flex-column-reverse flex-lg-row">
+        <div class="col-lg-6">
+          <picture>
+            <source media="(max-width:400px)" srcset="images/steak-cropped.png" />
+            <source srcset="images/steak.png" />
+            <img class="block-image" src="images/steak.png" alt="Red wine jus being poured on a plated steak" />
+          </picture>
+        </div>
+        <div class="block col-lg-6">
+          <div class="block__text">
+            <h1 class="block__heading">Open hours</h1>
+            <hr class="block__line" />
+            <p class="block__para">Tues: 4pm to late</p>
+            <p class="block__para">Wed to Sun: 12pm to late</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container-fluid px-0">
+      <div class="row no-gutters">
+        <div class="block col-lg-6">
+          <div class="block__text">
+            <h1 class="block__heading">Contact</h1>
+            <hr class="block__line" />
+            <p class="block__para">info@threecrownshotel.com.au</p>
+            <div class="block__phone">
+              <span itemprop="telephone">
+                <a class="block__phone-link" href="tel:03-93265033">03 9326 5033</a>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <picture>
+            <source media="(max-width:400px)" srcset="images/burger-cropped.png" />
+            <source srcset="images/burger.png" />
+            <img class="block-image" src="images/burger.png" alt="Burger in a basket with fries" />
+          </picture>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container-fluid px-0">
+      <div class="row mx-0">
+        <div class="footer">
+          <div class="footer__text">
+            <h1 class="footer__heading">Come dine with us</h1>
+            <hr class="footer__line" />
+            <p class="footer__hours">Tues: 4pm to late</p>
+            <p class="footer__hours">Wed to Sun: 12pm to late</p>
+            <div class="footer__phone">
+              <span itemprop="telephone">
+                <a class="footer__phone-link" href="tel:03-93265033">03 9326 5033</a>
+              </span>
+            </div>
+            <div class="footer__socials">
+              <a href="https://www.facebook.com/threecrownshotel" target="_blank"
+                class="footer__socials-button fa fa-facebook fa-2x"></a>
+              <a href="https://www.instagram.com/threecrownshotel/?hl=en" target="_blank"
+                class="footer__socials-button fa fa-instagram fa-2x"></a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </footer>
 
-    <!-- Two Columns Section -->
-    <section>
-      <div class="container-fluid px-0">
-        <div class="row no-gutters">
-          <div class="block col-lg-6">
-            <div class="block__text">
-              <h1 class="block__heading">Location</h1>
-              <hr class="block__line" />
-              <p class="block__para">
-                365 Victoria St, West Melbourne VIC 3003
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <picture>
-              <source
-                media="(max-width:400px)"
-                srcset="images/spritz-cropped.png"
-              />
-              <source srcset="images/spritz.png" />
-              <img
-                class="block-image"
-                src="images/spritz.png"
-                alt="Aperol Spritz Cocktail"
-              />
-            </picture>
-          </div>
-        </div>
-      </div>
-    </section>
+  <!-- Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-    <section>
-      <div class="container-fluid px-0">
-        <div class="row no-gutters flex-column-reverse flex-lg-row">
-          <div class="col-lg-6">
-            <picture>
-              <source
-                media="(max-width:400px)"
-                srcset="images/steak-cropped.png"
-              />
-              <source srcset="images/steak.png" />
-              <img
-                class="block-image"
-                src="images/steak.png"
-                alt="Red wine jus being poured on a plated steak"
-              />
-            </picture>
-          </div>
-          <div class="block col-lg-6">
-            <div class="block__text">
-              <h1 class="block__heading">Open hours</h1>
-              <hr class="block__line" />
-              <p class="block__para">Tues: 4pm to late</p>
-              <p class="block__para">Wed to Sun: 12pm to late</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+  <script src="script.js"> </script>
+  <!-- Bootstrap Jquery, Popper.js & JavaScript scripts -->
 
-    <section>
-      <div class="container-fluid px-0">
-        <div class="row no-gutters">
-          <div class="block col-lg-6">
-            <div class="block__text">
-              <h1 class="block__heading">Contact</h1>
-              <hr class="block__line" />
-              <p class="block__para">info@threecrownshotel.com.au</p>
-              <div class="block__phone">
-                <span itemprop="telephone">
-                  <a class="block__phone-link" href="tel:03-93265033"
-                    >03 9326 5033</a
-                  >
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <picture>
-              <source
-                media="(max-width:400px)"
-                srcset="images/burger-cropped.png"
-              />
-              <source srcset="images/burger.png" />
-              <img
-                class="block-image"
-                src="images/burger.png"
-                alt="Burger in a basket with fries"
-              />
-            </picture>
-          </div>
-        </div>
-      </div>
-    </section>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 
-    <!-- Footer -->
-    <footer>
-      <div class="container-fluid px-0">
-        <div class="row mx-0">
-          <div class="footer">
-            <div class="footer__text">
-              <h1 class="footer__heading">Come dine with us</h1>
-              <hr class="footer__line" />
-              <p class="footer__hours">Tues: 4pm to late</p>
-              <p class="footer__hours">Wed to Sun: 12pm to late</p>
-              <div class="footer__phone">
-                <span itemprop="telephone">
-                  <a class="footer__phone-link" href="tel:03-93265033"
-                    >03 9326 5033</a
-                  >
-                </span>
-              </div>
-              <div class="footer__socials">
-                <a
-                  href="https://www.facebook.com/threecrownshotel"
-                  target="_blank"
-                  class="footer__socials-button fa fa-facebook fa-2x"
-                ></a>
-                <a
-                  href="https://www.instagram.com/threecrownshotel/?hl=en"
-                  target="_blank"
-                  class="footer__socials-button fa fa-instagram fa-2x"
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+</body>
 
-    <!-- Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-    <script src="script.js"> </script>
-    <!-- Bootstrap Jquery, Popper.js & JavaScript scripts -->
-
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
