--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </li>
         <li>
           <a class="navbar__logo" href="/">
-            <img src="images/logo.svg" alt="Three Crowns Hotel Logo" />
+            <img src="/images/logo.svg" alt="Three Crowns Hotel Logo" />
           </a>
         </li>
         <li>
@@ -65,9 +65,9 @@
     <!-- Hero image -->
     <div>
       <picture>
-        <source media="(max-width:400px)" srcset="images/hero-image-cropped.png" />
-        <source srcset="images/hero-image.png" />
-        <img class="hero-image" src="images/hero-image.png" alt="People eating and drinking at a table" />
+        <source media="(max-width:400px)" srcset="/images/hero-image-cropped.png" />
+        <source srcset="/images/hero-image.png" />
+        <img class="hero-image" src="/images/hero-image.png" alt="People eating and drinking at a table" />
       </picture>
     </div>
   </header>
@@ -107,9 +107,9 @@
         </div>
         <div class="col-lg-6">
           <picture>
-            <source media="(max-width:400px)" srcset="images/spritz-cropped.png" />
-            <source srcset="images/spritz.png" />
-            <img class="block-image" src="images/spritz.png" alt="Aperol Spritz Cocktail" />
+            <source media="(max-width:400px)" srcset="/images/spritz-cropped.png" />
+            <source srcset="/images/spritz.png" />
+            <img class="block-image" src="/images/spritz.png" alt="Aperol Spritz Cocktail" />
           </picture>
         </div>
       </div>
@@ -121,9 +121,9 @@
       <div class="row no-gutters flex-column-reverse flex-lg-row">
         <div class="col-lg-6">
           <picture>
-            <source media="(max-width:400px)" srcset="images/steak-cropped.png" />
-            <source srcset="images/steak.png" />
-            <img class="block-image" src="images/steak.png" alt="Red wine jus being poured on a plated steak" />
+            <source media="(max-width:400px)" srcset="/images/steak-cropped.png" />
+            <source srcset="/images/steak.png" />
+            <img class="block-image" src="/images/steak.png" alt="Red wine jus being poured on a plated steak" />
           </picture>
         </div>
         <div class="block col-lg-6">
@@ -155,9 +155,9 @@
         </div>
         <div class="col-lg-6">
           <picture>
-            <source media="(max-width:400px)" srcset="images/burger-cropped.png" />
-            <source srcset="images/burger.png" />
-            <img class="block-image" src="images/burger.png" alt="Burger in a basket with fries" />
+            <source media="(max-width:400px)" srcset="/images/burger-cropped.png" />
+            <source srcset="/images/burger.png" />
+            <img class="block-image" src="/images/burger.png" alt="Burger in a basket with fries" />
           </picture>
         </div>
       </div>
